--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -15,4 +15,14 @@ set ( game_dir 		${game_dir} 	CACHE STRING "Path to Game Implementation" )
 include ( ${engine_dir}/CMakeLists.txt )
 include ( ${game_dir}/CMakeLists.txt )
 
+# enable c++11
+if (NOT CMAKE_DEFINED_COMPILER MATCHES NOMAD_MSVC)
+	if (CMAKE_GENERATOR STREQUAL Xcode)
+		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
+		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+	else ()
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++ -g -Wall")
+	endif ()
+endif ()
+
 project ( ballistic )
