Component Factory (Unfinished) #11

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -16,7 +16,7 @@ include ( ${engine_dir}/CMakeLists.txt )
 include ( ${game_dir}/CMakeLists.txt )
 
 # enable c++11
-if (NOT CMAKE_DEFINED_COMPILER MATCHES NOMAD_MSVC)
+if (NOT CMAKE_DEFINED_COMPILER MATCHES BALLISTIC_MSVC)
 	if (CMAKE_GENERATOR STREQUAL Xcode)
 		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
 		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
