Minor changes to build glow

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -20,6 +20,7 @@ set ( demo_dir      ${demo_dir}     CACHE STRING "Path to Demo implementation" )
 set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 # glfw
 add_subdirectory ( ${deps_dir}/glfw/ )
+include_directories ( ${deps_dir}/glfw/include )
 set_property (TARGET glfw PROPERTY FOLDER "dependencies")
 
 include ( ${engine_dir}/CMakeLists.txt )
