--- a/source/deps/glew/CMakeLists.txt
+++ b/source/deps/glew/CMakeLists.txt
@@ -1,17 +1,23 @@
 cmake_minimum_required(VERSION 2.8)
 
-project ( demo )
+project ( glew )
 # ----------------------------------------------------------------
 
 include_directories (
 	${CMAKE_CURRENT_LIST_DIR}/include
 )
 
-file ( GLOB demo_source
-	${CMAKE_CURRENT_LIST_DIR}/src/*.cpp
+file ( GLOB glew_source
+	${CMAKE_CURRENT_LIST_DIR}/src/*.c
 	${CMAKE_CURRENT_LIST_DIR}/include/*.h
 	${CMAKE_CURRENT_LIST_DIR}/include/*.hpp
 )
 
-add_executable ( demo ${demo_source} )
-target_link_libraries ( demo game engine graphics glfw glew ${glfw_LIBRARIES})
+add_library ( glew STATIC ${glew_source} )
+
+set_property ( 
+	TARGET glew
+	APPEND
+	PROPERTY COMPILE_DEFINITIONS GLEW_STATIC
+)
+#target_link_libraries ( glew )
