--- a/source/base/CMakeLists.txt
+++ b/source/base/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 2.8)
 project ( base )
 # ----------------------------------------------------------------
 
+include ( ${CMAKE_CURRENT_LIST_DIR}/CMake.Generate.txt )
+
 include_directories (
 	${CMAKE_CURRENT_LIST_DIR}/include
 )
