mid joining tinyxml2 as dependency

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 project ( ballistic_graphics )
 # ----------------------------------------------------------------
+set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Load engine library and main projects
 set ( proj_dir ${CMAKE_CURRENT_LIST_DIR} )
@@ -18,12 +19,16 @@ set ( Ballistic_Base_Dir      ${Ballistic_Base_Dir}     CACHE PATH "Path to Base
 set ( Ballistic_Graphics_Dir  ${Ballistic_Graphics_Dir} CACHE PATH "Path to Graphics Library" )
 set ( Ballistic_Demo_Dir      ${Ballistic_Demo_Dir}     CACHE PATH  "Path to Demo implementation" )
 
+# --------- dependencies ----------
+include (${proj_dir}/deps/tinyxml2/CMakeLists.txt )
+set_property (TARGET tinyxml2 PROPERTY FOLDER "deps")
+
+# --------- core projects ----------
 include ( ${Ballistic_Base_Dir}/CMakeLists.txt )
 include ( ${Ballistic_Graphics_Dir}/CMakeLists.txt )
 include ( ${Ballistic_Demo_Dir}/CMakeLists.txt )
 
 # --------- frontends ---------
-set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	include ( ${proj_dir}/frontend/win_desktop/CMakeLists.txt )
