--- a/source/demo/CMakeLists.txt
+++ b/source/demo/CMakeLists.txt
@@ -15,4 +15,4 @@ file ( GLOB demo_source
 
 add_executable ( demo ${demo_source} )
 
-target_link_libraries ( demo base graphics)
+target_link_libraries ( demo base graphics tinyxml2)
