Implemented windows window creation and frontend interface

--- a/source/frontend/win_desktop/CMakeLists.txt
+++ b/source/frontend/win_desktop/CMakeLists.txt
@@ -15,3 +15,4 @@ file ( GLOB win_desktop_source
 )
 
 add_executable ( win_desktop ${win_desktop_source} )
+target_link_libraries ( win_desktop base )
