broken gl test - Try to decide if go with OpenGL 3.2+

--- a/source/base/CMake.Generate.in
+++ b/source/base/CMake.Generate.in
@@ -44,4 +44,8 @@ const real real_one	= real (1);
 */
 #define ${CMAKE_DEFINED_ENDIANESS}
 
+#ifndef NDEBUG
+#	define BALLISTIC_DEBUG
+#endif
+
 #endif
