--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,56 +1,47 @@
 cmake_minimum_required(VERSION 2.8)
 
-# -------- setup cmake additions ---------
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/)
-# ----------------------------------------
+# set module path -------------------------------------
+include (${CMAKE_CURRENT_LIST_DIR}/cmake/git.cmake)
+include (${CMAKE_CURRENT_LIST_DIR}/cmake/system.cmake)
+# -----------------------------------------------------
 
 project ( ballistic )
 # ----------------------------------------------------------------
 set_property (GLOBAL PROPERTY USE_FOLDERS ON)
 
+# calculate current code version ----------------------
+git_revision (HEAD ${CMAKE_CURRENT_LIST_DIR}/.. BALLISTIC_REVISION_COUNT)
+git_revision_hash (HEAD ${CMAKE_CURRENT_LIST_DIR}/.. BALLISTIC_REVISION)
+
+message (STATUS "ballistic version: ${BALLISTIC_REVISION_COUNT}.${BALLISTIC_REVISION}")
+
 # Load engine library and main projects
 set ( proj_dir ${CMAKE_CURRENT_LIST_DIR} )
 
-set ( Ballistic_Base_Dir       		${proj_dir}/base )
-set ( Ballistic_Graphics_Dir   		${proj_dir}/graphics )
-set ( Ballistic_Graphics_DX_Dir		${proj_dir}/graphics_directx )
-set ( Ballistic_Graphics_OpenGL_Dir	${proj_dir}/graphics_opengl )
+set ( ballistic_base_dir       			${proj_dir}/base )
+set ( ballistic_graphics_dir   			${proj_dir}/graphics )
+set ( ballistic_graphics_opengl3_dir	${proj_dir}/graphics_opengl )
 
-set ( Ballistic_Demo_Dir			${proj_dir}/demo )
-
-# Enable building for several graphics api's
-if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-	set ( Ballistic_DXGraphics TRUE CACHE BOOL "Build for DirectX 9.0")
-endif ()
-
-set ( Ballistic_OpenGLGraphics TRUE CACHE BOOL "Build for OpenGL 3")
+set ( build_ballistic_opengl3 TRUE CACHE BOOL "Build for OpenGL 3")
 
 # library source code path settings
-set ( Ballistic_Base_Dir      ${Ballistic_Base_Dir}     CACHE PATH "Path to Base Library" )
-set ( Ballistic_Graphics_Dir  ${Ballistic_Graphics_Dir} CACHE PATH "Path to Graphics Library" )
-set ( Ballistic_Demo_Dir      ${Ballistic_Demo_Dir}     CACHE PATH "Path to Demo implementation" )
+set ( ballistic_base_dir      ${ballistic_base_dir}     CACHE PATH "Path to Base Library" )
+set ( ballistic_graphics_dir  ${ballistic_graphics_dir} CACHE PATH "Path to Graphics Library" )
 
-set ( Ballistic_Graphics_DX_Dir ${Ballistic_Graphics_DX_Dir} CACHE PATH "Path to DirectX device implementation" )
-set ( Ballistic_Graphics_OpenGL_Dir ${Ballistic_Graphics_OpenGL_Dir} CACHE PATH "Path to OpenGL device implementation")
+set ( ballistic_graphics_opengl3_dir ${ballistic_graphics_opengl3_dir} CACHE PATH "Path to OpenGL device implementation")
 
 # --------- dependencies ----------
 include (${proj_dir}/deps/tinyxml2/CMakeLists.txt )
 include (${proj_dir}/deps/glew/CMakeLists.txt)
 
 # --------- core projects ----------
-include ( ${Ballistic_Base_Dir}/CMakeLists.txt )
+include ( ${ballistic_base_dir}/CMakeLists.txt )
 
-include ( ${Ballistic_Graphics_Dir}/CMakeLists.txt )
+include ( ${ballistic_graphics_dir}/CMakeLists.txt )
 
-if ( Ballistic_DXGraphics )
-	include (${Ballistic_Graphics_DX_Dir}/CMakeLists.txt)
+if ( build_ballistic_opengl3 )
+	include (${ballistic_graphics_opengl3_dir}/CMakeLists.txt)
 endif()
-
-if ( Ballistic_OpenGLGraphics )
-	include (${Ballistic_Graphics_OpenGL_Dir}/CMakeLists.txt)
-endif()
-
-include ( ${Ballistic_Demo_Dir}/CMakeLists.txt )
 
 # --------- frontends ---------
 
@@ -60,7 +51,7 @@ include ( ${proj_dir}/frontend/dev_frontend/CMakeLists.txt )
 # -----------------------------
 
 # enable c++11
-if (NOT CMAKE_DEFINED_COMPILER MATCHES BALLISTIC_MSVC)
+if (NOT ${CMAKE_CXX_COMPILER_ID} EQUAL "MSVC")
 	if (CMAKE_GENERATOR STREQUAL Xcode)
 		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
 		set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
