starting tool-gui development

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -52,6 +52,7 @@ include ( ${proj_dir}/frontend/frontend/CMakeLists.txt )
 include ( ${proj_dir}/frontend/dev_frontend/CMakeLists.txt )
 include ( ${proj_dir}/frontend/perf_test/CMakeLists.txt )
 include ( ${proj_dir}/frontend/model_viewer/CMakeLists.txt )
+include ( ${proj_dir}/frontend/material_editor/CMakeLists.txt )
 
 # -----------------------------
 
