--- a/source/base/ballistic.config.in
+++ b/source/base/ballistic.config.in
@@ -2,9 +2,9 @@
 #ifndef _ballistic_config_h_
 #define _ballistic_config_h_
 
-#	define BALLISTIC_REVISION ${BALLISTIC_REVISION}
-#	define BALLISTIC_REVISION_COUNT ${BALLISTIC_REVISION_COUNT}
-#	define BALLISTIC_VERSION ${BALLISTIC_REVISION_COUNT}.${BALLISTIC_REVISION}
+#	define BALLISTIC_REVISION "${BALLISTIC_REVISION}"
+#	define BALLISTIC_REVISION_COUNT "${BALLISTIC_REVISION_COUNT}"
+#	define BALLISTIC_VERSION "${BALLISTIC_REVISION_COUNT}.${BALLISTIC_REVISION}"
 
 // common include files
 ${BALLISTIC_COMMON_INCLUDES}
